--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,35 +1,40 @@
-name: CI/CD for Random Number Generator App
+name: Deploy to GCP
+
 on:
   push:
     branches:
       - main
 
 jobs:
-  build_and_deploy:
+  deploy:
+    name: Deploy
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout source code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Build Docker image
-      run: |
-        docker build -t random-number-generator .
-        echo ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }} | base64 -d > gcp-key.json
-        gcloud auth activate-service-account --key-file=gcp-key.json
-        docker tag random-number-generator gcr.io/${{ secrets.GCP_PROJECT_ID }}/random-number-generator:${{ github.sha }}
-        docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/random-number-generator:${{ github.sha }}
-      env:
-        GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
-        TAG: ${{ github.sha }}
+      - name: Set up Google Cloud SDK
+        uses: google-github-actions/setup-gcloud@master
+        with:
+          service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          export_default_credentials: true
 
-    - name: Deploy to Google Cloud Run
-      uses: GoogleCloudPlatform/github-actions/deploy-cloudrun@main
-      with:
-        service: random-number-service
-        image: gcr.io/${{ secrets.GCP_PROJECT_ID }}/random-number-generator:${{ github.sha }}
-      env:
-        PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
-        REGION: us-central1
-        CLOUDSDK_CORE_PROJECT: ${{ secrets.GCP_PROJECT_ID }}
-        CLOUDSDK_COMPUTE_ZONE: us-central1-a
+      - name: Build and push Docker image
+        run: |
+          docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/my-app .
+          docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/my-app
+
+      - name: Check if service exists
+        id: check_service
+        run: |
+          gcloud run services describe my-app --platform managed --region us-central1 || echo "::set-output name=exists::false"
+        continue-on-error: true
+
+      - name: Create service if it doesn't exist
+        if: steps.check_service.outputs.exists == 'false'
+        run: |
+          gcloud run deploy my-app --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/my-app --platform managed --region us-central1
+        env:
+          PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
